--- a/sunrise.css
+++ b/sunrise.css
@@ -36,11 +36,11 @@ a{
 }
 
 a:link {
-    color: black;
+    color: grey;
 }
 
 a:visited {
-    color: black;
+    color: grey;
 }
 
 a:hover {
@@ -48,7 +48,7 @@ a:hover {
 }
 
 a:active {
-    color: black;
+    color: grey;
 }
 
 .link{
