more link stuff

--- a/day.css
+++ b/day.css
@@ -1,5 +1,11 @@
 body{
-    background-image: url("images/daytime.png");
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#3093e5+0,9dc6e8+53,539fe1+100 */
+    background: #3093e5; /* Old browsers */
+    background: -moz-linear-gradient(top,  #3093e5 0%, #9dc6e8 53%, #539fe1 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #3093e5 0%,#9dc6e8 53%,#539fe1 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #3093e5 0%,#9dc6e8 53%,#539fe1 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3093e5', endColorstr='#539fe1',GradientType=0 ); /* IE6-9 */
+
 }
 
 #background{
@@ -32,14 +38,15 @@ body{
 
 a{
     text-decoration:none;
+    text-decoration:bold;
 }
 
 a:link {
-    color: grey;
+    color: black;
 }
 
 a:visited {
-    color: grey;
+    color: black;
 }
 
 a:hover {
@@ -47,7 +54,7 @@ a:hover {
 }
 
 a:active {
-    color: grey;
+    color: black;
 }
 
 .link{
