RIP starry night </3

--- a/night.css
+++ b/night.css
@@ -1,6 +1,11 @@
 body{
-    background-image: url("images/night.png");
-    background-size: 100% 100%;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#0a2c93+0,a849a3+100 */
+    background: #0a2c93; /* Old browsers */
+    background: -moz-linear-gradient(top, #0a2c93 0%, #a849a3 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, #0a2c93 0%,#a849a3 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, #0a2c93 0%,#a849a3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#0a2c93', endColorstr='#a849a3',GradientType=0 ); /* IE6-9 */
+    copy
 }
 
 #background{
@@ -29,10 +34,6 @@ body{
     padding-right:10%;
     padding-bottom:5%;
     color:white;
-}
-
-a{
-    text-decoration:none;
 }
 
 a:link {
