--- a/fathersDay/main.css
+++ b/fathersDay/main.css
@@ -6,25 +6,27 @@ text-align: center;
 h1{
 color:red;
 font-family: "Arial", sans-serif;
+font-size:50px;
 }
 
 h2{
 color:red;
 font-family: "Arial", sans-serif;
+font-size:35px;
 }
 
 #beach{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
 #pork{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
 #trebek{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
@@ -34,6 +36,7 @@ margin-right:20px;
 }
 
 audio{
+float: right;
 position:relative;
-top:200px;
+top:100px;
 }
