--- a/fathersDay/main.css
+++ b/fathersDay/main.css
@@ -6,27 +6,27 @@ text-align: center;
 h1{
 color:red;
 font-family: "Arial", sans-serif;
-font-size:100px;
+font-size:50px;
 }
 
 h2{
 color:red;
 font-family: "Arial", sans-serif;
-font-size:55px;
+font-size:35px;
 }
 
 #beach{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
 #pork{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
 #trebek{
-height: 300px;
+height: 200px;
 width:auto;
 }
 
@@ -36,7 +36,11 @@ margin-right:40px;
 }
 
 audio{
-float: right;
+float: left;
 position:relative;
 top:100px;
+}
+#div{
+display:block;
+width:600px;
 }
